--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -53,7 +53,36 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.11.3</version>
+		</dependency>
+	
+   <dependency>
+     <groupId>org.scala-lang</groupId>
+     <artifactId>scala-library</artifactId>
+     <version>2.13.0</version>
+   </dependency>
+ 
+   <dependency>
+     <groupId>org.clojure</groupId>
+     <artifactId>clojure</artifactId>
+     <version>1.10.1</version>
+   </dependency>
+ 
+   <dependency>
+     <groupId>com.fasterxml.jackson.core</groupId>
+     <artifactId>jackson-core</artifactId>
+     <version>2.10.0.pr1</version>
+   </dependency>
+ 
+   <dependency>
+     <groupId>org.postgresql</groupId>
+     <artifactId>postgresql</artifactId>
+     <version>42.2.6</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
